# arches

./: .gitignore  CMakeLists.txt  README.md  documetation.md  main.py  setup.py
.github/workflows/: black.yml  test_python.yml
arches/: __init__.py  algorithms.py  chunking.py  determinant.py  drivers.py  func_decorators.py  fundamental_types.py  integral_indexing_utils.py  integrals.py  io.py  kernels.py  linked_object.py  log_timer.py  matrix.py  version.py
arches/legacy/: drivers.py  fundamental_types.py  main.py  test_everything_all_at_once.py
arches/src/: array_interface.cpp  arrays.cpp  determinant.cpp  integrals.cpp  kernels.cpp  matrix.cpp
arches/src/include/: array_interface.h  arrays.h  determinant.h  integral_indexing_utils.h  integrals.h  kernels.h  matrix.h
qe/: algorithms.py  chunking.py  drivers.py  func_decorators.py  fundamental_types.py  integral_indexing_utils.py  io.py  matrix.py  version.py
qe/src/: determinant.cpp  integral_indexing_utils.cpp  integral_types.cpp  integral_types.h
qe/src/include/: determinant.h  integral_indexing_utils.h  integrals.h
tests/: example.out  example.py  test_algorithms.py  test_determinant.py  test_everything_all_at_once.py  test_integrals.py  test_kernels.py  test_matrix.py  test_types.py
